# semaphore-collection

./: README.md  galaxy.yml  pyproject.toml
.github/workflows/: ansible-test.yml
plugins/modules/: auth_login_post.py  auth_logout_post.py  events_lats_get.py  info.py  info_get.py  ping_get.py  project_project_id_delete.py  project_project_id_environment_environment_id_delete.py  project_project_id_environment_environment_id_put.py  project_project_id_environment_get.py  project_project_id_environment_post.py  project_project_id_events_get.py  project_project_id_get.py  project_project_id_inventory_get.py  project_project_id_inventory_inventory_id_delete.py  project_project_id_inventory_inventory_id_put.py  project_project_id_inventory_post.py  project_project_id_keys_get.py  project_project_id_keys_key_id_delete.py  project_project_id_keys_key_id_put.py  project_project_id_keys_post.py  project_project_id_put.py  project_project_id_repositories_get.py  project_project_id_repositories_post.py  project_project_id_repositories_repository_id_delete.py  project_project_id_schedules_post.py  project_project_id_schedules_schedule_id_delete.py  project_project_id_schedules_schedule_id_get.py  project_project_id_schedules_schedule_id_put.py  project_project_id_tasks_get.py  project_project_id_tasks_last_get.py  project_project_id_tasks_task_id_delete.py  project_project_id_tasks_task_id_get.py  project_project_id_tasks_task_id_output_get.py  project_project_id_templates_get.py  project_project_id_templates_post.py  project_project_id_templates_template_id_delete.py  (+25 more)
(+2 files in other folders)
